--- a/style/style.css
+++ b/style/style.css
@@ -67,9 +67,11 @@
 
 .task__index{
     position: absolute;
+    text-align: right;
+    width: 20px;
     top: 50%;
     transform: translateY(-50%);
-    left: -15px;
+    left: -25px;
 }
 
 .task__text {
@@ -82,6 +84,10 @@
 }
 .task.done .task__text {
     text-decoration: line-through;
+}
+
+.task.pinned {
+    border-bottom: 2px solid red;
 }
 
 
