--- a/style/style.css
+++ b/style/style.css
@@ -48,6 +48,10 @@
     display: flex;
     flex-direction: column;
     row-gap: 10px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 .task {
