--- a/style/style.css
+++ b/style/style.css
@@ -48,10 +48,12 @@
     display: flex;
     flex-direction: column;
     row-gap: 10px;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+    -webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
 
 .task {
